[package]
name = "uefi_derive"
version = "0.1.0"
authors = ["sanfusu <sanfusu@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
guid = { git = "https://github.com/sanfusu/guid" }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
